# QtApp

JocTel/: .gitignore  CMakeLists.txt  MainMenu.qml  TerenBasket.qml  TerenFotbal.qml  discsaving.cpp  discsaving.h  images.qrc  main.cpp  main.qml  scoremodel.cpp  scoremodel.h
Proiecte/JocTel/: .gitignore  TerenFotbal.qml  main.cpp  main.qml
